@@ -6,15 +6,7 @@ plugins {
 
 group = 'com.backend'
 version = '1.0.0'
-sourceCompatibility = '17'
-
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
+sourceCompatibility = '11'
 
 configurations {
     compileOnly {
@@ -34,6 +26,9 @@ dependencies {
     // spring dependencies
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.6'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.6'
+
+    // spring security
+    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.5.3'
 
     // postgresql
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.24'
